# modelito

./: .gitignore  .gitmodules  AGENTS.md  AUDIT_REPORT.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MAINTAINER.md  README.md  RELEASE.md  RELEASE_ANNOUNCEMENT_v1.0.3.md  RELEASE_NOTES_v1.0.3.md  STATUS.md  TESTING.md  dev-requirements.txt  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  integration-ollama.yml  integration-tests.yml  publish-testpypi.yml  publish.yml  smoke-tests.yml
.venv-test/: pyvenv.cfg
.venv_pypi/: pyvenv.cfg
.venv_testpypi/: pyvenv.cfg
docs/: API.md  API_AND_REFACTOR_PLAN.md  ARCHITECTURE.md  AUDIT_2026-05-12.md  INSTALL.md  MIGRATION_AND_API_PLAN.md  USAGE.md  build_docs.sh  local-openai-compatible.md
docs/audits/: 2026-04-24.md
docs/releases/: v1.0.3-announcement.md  v1.0.3-notes.md
docs/source/: api.rst  conf.py  index.rst  modules.rst
examples/: README.md  advanced.py  claude_example.py  client_example.py  gemini_example.py  ollama_cli.py  ollama_manage.py  openai_example.py  provider_example.py  quickstart.py
modelito/: __init__.py  adapter.py  api_key_manager.py  batching.py  cache.py  claude.py  client.py  config.py  connector.py  embeddings.py  errors.py  exceptions.py  gemini.py  grok.py  local_model_manager.py  messages.py  mock_provider.py  model_metadata.py  normalization.py  ollama.py  ollama_api.py  ollama_service.py  openai.py  plumbing.py  provider.py  provider_registry.py  streaming.py  timeout.py  timeout_calibrate.py  timeout_cli.py  tokenizer.py
modelito/data/: ollama_remote_timeout_catalog.json
scripts/: bump_version.py  calibrate_timeout_catalog.py  check_no_legacy_dicts.py  package_release.sh
tests/: conftest.py  test_api_key_manager.py  test_batching.py  test_cache.py  test_claude_sdk_stream.py  test_client.py  test_config.py  test_config_merge.py  test_connector.py  test_embeddings.py  test_ensure_model_available.py  test_errors.py  test_gemini_sdk_stream.py  test_import_modelito.py  test_install_helpers.py  test_local_model_manager.py  test_mock_provider.py  test_model_metadata.py  test_normalization.py  test_ollama_adapter.py  test_ollama_admin_helpers.py  test_ollama_api.py  test_ollama_async_wrappers.py  test_ollama_cli_helpers.py  test_ollama_integration.py  test_ollama_model_mgmt.py  test_ollama_plumbing.py  test_ollama_running_verbose.py  test_ollama_service.py  test_ollama_service_more.py  test_ollama_stream.py  test_openai_async.py  test_openai_claude.py  test_openai_sdk_embeddings.py  test_openai_sdk_stream.py  test_plumbing.py  test_provider_sdks.py  test_providers.py  test_streaming.py  test_timeout.py  (+2 more)
tests/integration/: test_integration_anthropic_stream.py  test_integration_ollama_stream.py  test_integration_openai_stream.py
tests/smoke/: test_connector_smoke.py  test_providers_smoke.py
