[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "modelito"
version = "0.1.1"
description = "Lightweight LLM provider abstractions and connectors (extracted)."
readme = "README.md"
requires-python = ">=3.8"
authors = [ { name = "mail_summariser" } ]
license = { text = "MIT" }
dependencies = []

[project.optional-dependencies]
ollama = ["psutil"]
http = ["httpx"]
tokenization = ["tiktoken"]
