[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "modelito"
version = "1.0.1"
description = "Lightweight Python abstractions and connectors for LLM providers (OpenAI, Claude, Gemini, Ollama)."
readme = "README.md"
requires-python = ">=3.10"
authors = [ { name = "krahd" } ]
license = "MIT"
license-files = ["LICENSE"]
keywords = ["llm", "provider", "tokenizer", "ollama", "openai"]
classifiers = [
	"Development Status :: 4 - Beta",
	"Intended Audience :: Developers",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3 :: Only",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
	"Topic :: Software Development :: Libraries",
]
dependencies = []

[project.optional-dependencies]
ollama = ["psutil"]
http = ["httpx"]
tokenization = ["tiktoken"]
openai = ["openai"]
anthropic = ["anthropic"]
dev = ["pytest", "pytest-asyncio", "pytest-mock", "mypy", "ruff", "black"]

[project.urls]
Homepage = "https://github.com/krahd/modelito"
Repository = "https://github.com/krahd/modelito"
Changelog = "https://github.com/krahd/modelito/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["modelito*"]
